Remove dependency on Base64 from jasypt
We can use sun.misc.BASE64* as it is already used in
net.ocheyedan.ply.dep.BasicAuth.

In the future should look for a Apache licensed file and copy it into the
tree as sun.misc.* is not public API.